--- a/Blueberry/app/src/main/res/layout/activity_name_crop.xml
+++ b/Blueberry/app/src/main/res/layout/activity_name_crop.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nameCropActivityLinearLayout"
     style="@style/LayoutStyle"
     android:layout_width="match_parent"
@@ -67,19 +68,24 @@
 
         <Button
             android:id="@+id/btn_ok_name"
-            style="@style/ButtonStyle"
+            style="@style/IconButtonStyle"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ok" />
+            android:text="ok"
+            app:icon="@drawable/button_icon_ok"
+            app:iconSize="20dp" />
 
         <Button
             android:id="@+id/btn_cancel_name"
-            style="@style/ButtonStyle"
+            style="@style/IconButtonStyle"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="cancel" />
+            android:text="cancel"
+            app:icon="@drawable/button_icon_cancel"
+            app:iconSize="20dp" />
+
     </LinearLayout>
 
 </LinearLayout>
