--- a/Blueberry/app/src/main/res/layout/fragment_group_list.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_group_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/LayoutStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,11 +30,13 @@
 
         <Button
             android:id="@+id/group_list_button_back"
-            style="@style/ButtonStyle"
+            style="@style/IconButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Back" />
+            android:text="Back"
+            app:icon="@drawable/button_icon_back"
+            app:iconSize="20dp" />
     </RelativeLayout>
 
 </LinearLayout>
