--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -25,6 +25,7 @@
             android:layout_marginStart="5dp"
             android:fontFamily="@font/nanumsquare"
             android:text="@string/recheck2_title"
+            android:textStyle="bold"
             android:textColor="@color/colorWhite" />
 
         <!--        <TextView-->
@@ -92,7 +93,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="이름을 선택한 후 수정하세요"
+            android:hint="이름을 선택 한 후 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
@@ -118,7 +119,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="휴대전화 번호를 입력하고 수정하세요"
+            android:hint="휴대전화 번호를 선택하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
@@ -144,7 +145,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="이메일을 입력하고 수정하세요"
+            android:hint="이메일을 선택하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
@@ -170,7 +171,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="홈페이지 주소를 입력하고 수정하세요"
+            android:hint="홈페이지 주소를 선택하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
@@ -222,7 +223,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="주소를 입력하고 수정하세요"
+            android:hint="주소를 선택하고 수정하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
@@ -248,7 +249,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
-            android:hint="그룹을 지정하세요"
+            android:hint="그룹을 선택하세요"
             android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
