--- a/Blueberry/app/src/main/res/layout/fragment_list.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_list.xml
@@ -58,7 +58,7 @@
         android:layout_marginBottom="160dp"
         android:src="@drawable/icon_gallery"
         android:visibility="invisible"
-        app:backgroundTint="#ffffff"
+        app:backgroundTint="@color/colorWhite"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp" />
 
@@ -73,7 +73,7 @@
         android:layout_marginBottom="90dp"
         android:src="@drawable/icon_camera"
         android:visibility="invisible"
-        app:backgroundTint="#ffffff"
+        app:backgroundTint="@color/colorWhite"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp" />
 
@@ -87,9 +87,9 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="#ffffff"
+        android:backgroundTint="@color/colorWhite"
         android:src="@drawable/icon_add_simple"
-        app:backgroundTint="#ffffff"
+        app:backgroundTint="@color/colorWhite"
         app:borderWidth="0.5dp" />
 
 </RelativeLayout>
