--- a/Blueberry/app/src/main/res/values/colors.xml
+++ b/Blueberry/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#9377BB</color>
+    <color name="colorPrimaryDark">#9377BB</color>
     <color name="colorAccent">#9377BB</color>
     <color name="colorBlueBerry">#9377BB</color>
     <color name="colorWhite">#FFFFFF</color>
