--- a/Blueberry/app/src/main/res/layout/fragment_detail_info.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_detail_info.xml
@@ -10,6 +10,32 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBlueBerry"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/detail_info_button_back"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:background="@color/colorBlueBerry"
+            android:tint="@color/colorWhite"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="8"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="세부사항"
+            android:textColor="@color/colorWhite"
+            android:textSize="40dp" />
+    </LinearLayout>
+
+    <LinearLayout
         style="@style/LayoutStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -47,7 +73,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -61,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="홍길동" />
+                    android:text="없음" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,7 +98,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -86,7 +112,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="010-1111-2222" />
+                    android:text="없음"
+                    android:autoLink="phone"/>
             </LinearLayout>
 
             <LinearLayout
@@ -97,7 +124,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -111,7 +138,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="hello@gmail.com" />
+                    android:text="없음"
+                    android:autoLink="email"/>
             </LinearLayout>
 
             <LinearLayout
@@ -122,7 +150,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -136,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="회사명" />
+                    android:text="없음" />
             </LinearLayout>
 
             <LinearLayout
@@ -147,7 +175,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -161,7 +189,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="https://www.naver.com" />
+                    android:text="없음"
+                    android:autoLink="web"/>
             </LinearLayout>
 
             <LinearLayout
@@ -172,7 +201,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -185,7 +214,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
-                    android:text="서울시 구로구 구로3동 1111-11호 A동 111호" />
+                    android:text="없음" />
             </LinearLayout>
 
             <LinearLayout
@@ -196,7 +225,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -210,7 +239,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="가족" />
+                    android:text="없음" />
             </LinearLayout>
 
             <LinearLayout
@@ -221,7 +250,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -235,7 +264,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3.5"
                     android:singleLine="true"
-                    android:text="2019-12-12 10:00:55" />
+                    android:text="불러오는데 오류가 발생했습니다." />
             </LinearLayout>
 
             <LinearLayout
@@ -246,7 +275,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/TextViewStyle"
+                    style="@style/InfoStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -261,25 +290,12 @@
                     android:layout_weight="3.5"
                     android:textSize="10dp"
                     android:singleLine="true"
-                    android:text="sdcard/DCIM/blueberry" />
+                    android:text="불러오는데 오류가 발생했습니다."/>
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
-        style="@style/LayoutStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/detail_info_button_back"
-            style="@style/ButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Back" />
-    </RelativeLayout>
 
 </LinearLayout>
 
