--- a/Blueberry/app/src/main/res/values/styles.xml
+++ b/Blueberry/app/src/main/res/values/styles.xml
@@ -17,6 +17,14 @@
         <item name="color">@color/colorBlueBerry</item>
     </style>
 
+
+    <style name="InfoStyle" parent="TextViewStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorBlueBerry</item>
+    </style>
+
+
     <style name="TextViewSmallStyle" parent="AppTheme">
         <item name="android:textSize">13dp</item>
         <item name="android:layout_margin">5dp</item>
@@ -27,7 +35,9 @@
         <item name="android:textAlignment">center</item>
     </style>
 
-    <style name="LayoutStyle" parent="AppTheme"></style>
+    <style name="LayoutStyle" parent="AppTheme">
+
+    </style>
 
     <style name="EditTextStyle" parent="TextViewStyle"></style>
 
