--- a/Blueberry/app/src/main/res/layout/group_item.xml
+++ b/Blueberry/app/src/main/res/layout/group_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:clickable="true"/>
 
 </LinearLayout>
