--- a/Blueberry/app/src/main/res/layout/activity_edit.xml
+++ b/Blueberry/app/src/main/res/layout/activity_edit.xml
@@ -26,7 +26,7 @@
             android:fontFamily="@font/nanumsquare"
             android:text="@string/recheck2_title"
             android:textStyle="bold"
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/colorBlueBerry" />
 
         <!--        <TextView-->
         <!--            style="@style/TextViewStyle"-->
@@ -94,9 +94,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="이름을 선택 한 후 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -121,9 +120,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="휴대전화 번호를 선택하고 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -148,9 +146,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="이메일을 선택하고 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -175,9 +172,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="홈페이지 주소를 선택하고 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -202,9 +198,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="회사 이름을 선택하고 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -229,9 +224,8 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="주소를 선택하고 수정하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
-            android:textCursorDrawable="@color/colorWhite"
+            android:textCursorDrawable="@color/colorBlueBerry"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
             app:dropDownDrawable="@drawable/picker"
             app:dropDownDrawableHeight="25dp"
@@ -256,7 +250,6 @@
             android:layout_weight="1"
             android:fontFamily="@font/nanumsquare"
             android:hint="그룹을 선택하세요"
-            android:textColorHint="@color/colorWhite"
             android:textSize="@dimen/recheck1_question1"
             android:textCursorDrawable="@color/colorWhite"
             app:dropDownAnimStyle="@style/CustomPopupAnimation"
