--- a/Blueberry/app/src/main/res/layout/fragment_option.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_option.xml
@@ -1,15 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/LayoutStyle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80sp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:src="@drawable/blueberry_icon" />
+
+        <TextView
+            android:id="@+id/option_app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="top|center_horizontal"
+            android:fontFamily="@font/polyregular"
+            android:text="@string/app_name"
+            android:textColor="@color/colorBlueBerry"
+            android:textSize="60sp" />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:id="@+id/button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <LinearLayout
@@ -22,21 +57,19 @@
             <Button
                 android:id="@+id/button_backup"
                 style="@style/IconButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:text="@string/button_backup"
+                android:textSize="20dp"
                 app:icon="@drawable/button_icon_backup"
-                app:iconSize="20dp" />
-
-            <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-
+                app:iconSize="30dp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D3D3D3"></TextView>
 
         <LinearLayout
             android:id="@+id/layout_restore"
@@ -48,21 +81,19 @@
             <Button
                 android:id="@+id/button_restore"
                 style="@style/IconButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:text="@string/button_restore"
+                android:textSize="20dp"
                 app:icon="@drawable/button_icon_restore"
-                app:iconSize="20dp" />
-
-            <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-
+                app:iconSize="30dp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D3D3D3"></TextView>
 
         <LinearLayout
             android:id="@+id/layout_signOut"
@@ -74,20 +105,19 @@
             <Button
                 android:id="@+id/button_signOut"
                 style="@style/IconButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:text="@string/button_signOut"
+                android:textSize="20dp"
                 app:icon="@drawable/button_icon_signout"
-                app:iconSize="20dp" />
-
-            <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                app:iconSize="30dp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D3D3D3"></TextView>
 
         <LinearLayout
             android:id="@+id/layout_autoSave"
@@ -96,30 +126,30 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Switch
+            <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/auto_save"
-                android:layout_width="wrap_content"
+                style="@style/IconButtonStyle"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
+                android:background="@color/colorBlueBerry"
                 android:layoutDirection="rtl"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="3"
-                android:text="@string/switch1" />
+                android:text="Auto Save to Contract"
+                android:textSize="20dp" />
 
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#D3D3D3"></TextView>
     </LinearLayout>
 
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_blueberry_info"
         style="@style/TextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:text="@string/information" />
 
-</RelativeLayout>
+</LinearLayout>
